--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,7 +106,10 @@ li {
 
 p { line-height: 1.4;}
 
-.block-wrapper { width: 67%;}
+.block-wrapper { 
+  width: 67%;
+  margin: 0 auto;
+}
 /*=================================
   Header styling starts here
 =================================*/
@@ -150,6 +153,7 @@ nav {
   float: right;
 }
 
+.nav-item .active { color: #ffff00;}
 /*=================================
   Header styling ends here
 =================================*/  
@@ -184,7 +188,7 @@ nav {
 
 /*info start here */
 
-.info { padding: 106px 10%;}
+.info { padding: 106px 0;}
 
 .info-title {
   padding-bottom: 40px;
@@ -247,8 +251,8 @@ nav {
 .black ,.yellow{ padding:100px 0 120px 10%;}
 
 .company,.corporate { 
-  width: 40%;
-  padding-right: 10%;
+  width: 45%;
+  padding: 0 2%;
   display: flex;
   flex-direction: column;
 }
@@ -273,7 +277,7 @@ nav {
   padding-bottom: 20px;
   color: #fff;
   font-size: 28px;
-  font-weight: 400;
+  font-weight: 900;
 }
 
 .company-title,.corporate-title {
@@ -292,7 +296,7 @@ nav {
 }
 
 .learn-btn { 
-  width: 25%;
+  width: 20%;
   padding:15px 2%;
   background-color: #424242;
   color: #fff;
@@ -315,7 +319,7 @@ nav {
 /*company and corporate end here */
 
 /*article satrt here */
-article { padding: 125px 0 30px 20%;}
+article { padding: 125px 0 30px 0;}
 
 .article-title { 
   padding-bottom: 33px;
@@ -334,9 +338,10 @@ article { padding: 125px 0 30px 20%;}
 .cards { 
   padding-bottom: 125px;
   display: flex;
+  justify-content: center;
 }
 
-.card { flex-basis: 25%;}
+.card { flex-basis: 30%;}
 
 .card:nth-child(2){ margin: 0 3%;}
 
@@ -377,11 +382,14 @@ article { padding: 125px 0 30px 20%;}
 .clients { 
   padding-bottom: 150px ;
   display: flex;
+  justify-content: center;
 }
 
 .client { margin-right: 10%;}
 
-.manager { display: flex;}
+.manager { 
+  display: flex;
+}
 
 .manager-img img {
   width: 80%;
@@ -452,7 +460,6 @@ footer {
 
 .icon {
   margin-right: 5%;
-  color: #fff;
   font-family: 'FontAwesome';
   font-size: 30px;
   font-weight: 900;
@@ -460,11 +467,40 @@ footer {
 }
 
 .twitter::before {
-  background-color: #375091;
+  color: #3b5999;
   content: '\f081';
   text-indent: 1px;
   float: right;
 }
+
+.fb::before {
+  color: #3692c5;
+  content: '\f082';
+  text-indent: 1px;
+  float: right;
+}
+
+.in::before {
+  color: #016fa3;
+  content: '\f08c';
+  text-indent: 1px;
+  float: right;
+}
+
+.g::before {
+  color: #e14f3b;
+  content: '\f0d4';
+  text-indent: 1px;
+  float: right;
+}
+
+.pinter::before {
+  color: #cd2227;
+  content: '\f0d3';
+  text-indent: 1px;
+  float: right;
+}
+
 
 .pages { display: flex;}
 
