--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,7 +322,7 @@ nav {
 article { padding: 125px 0 30px 0;}
 
 .article-title { 
-  padding-bottom: 33px;
+  padding-bottom: 15px;
   font-size: 32px;
   font-weight: 400;
   text-transform: uppercase;
@@ -444,7 +444,7 @@ footer {
 }
 
 .builder {
-  padding-right: 40%;
+  padding-right: 20%;
   display: flex;
   flex-direction: column;
 }
@@ -506,7 +506,7 @@ footer {
 
 .page {
   width: 30%;
-  margin-right: 40%;
+  margin-right: 80%;
 }
 
 .links { 
@@ -621,4 +621,13 @@ footer {
   }
 
   .card:nth-child(2) {  margin:20px  0;}
+
+  .manager{  
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .manager-img {
+    width: 100%;
+  }
 }  
