--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,10 @@ nav {
 
 .banner {
   padding: 140px 0;
-  background-image: url('https://via.placeholder.com/1356x353?text=manager');
+  background-image: url('../images/banner.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   text-align: center;
 }
 
@@ -412,6 +415,7 @@ article { padding: 125px 0 30px 0;}
   display: -webkit-box; 
   display: -ms-flexbox; 
   display: flex;
+  align-items: center;
 }
 
 .manager-img img {
@@ -434,20 +438,26 @@ article { padding: 125px 0 30px 0;}
 }
 
 .controls { 
+  width: 40%;
   padding: 10px 0;
-  width: 100%;
+  margin: 0 25%;
   text-align: center;
 }
 
-.control {
-  padding: .1px 1%;
+.control { 
   border: none;
-  border-radius: 50%;
-  background-color: #656565;
   text-indent: -9999px;
 }
 
-.control-active,.control:hover  { background-color: #7dc3ed;}
+.control::before { 
+  color: #696772;
+  font-family: 'FontAwesome';
+  text-indent: 1px;
+  content:'\f111';
+  float: right;
+}
+
+.control-active::before,.control:hover::before  { color: #7dc3ed;}
 
 
 
@@ -590,7 +600,7 @@ footer {
 
 /*media query for 768px starts here*/
 @media only screen and (max-width: 768px) {
-  .logo {padding-right: 20%;}
+  .logo {padding-right: 10%;}
 
   .service figure { width: 50%;}
 
